[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
bs58 = "0.5.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
bip39 = "2.2.0"
rand = "0.9.1"
hex = "0.4.3"
zeroize = "1.8.1"
