[package]
name = "gui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.0" }
egui = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.4"
blockchain-core = { path = "../blockchain-core" }
anyhow = "1"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
rand = "0.9.0"
secp256k1 = "0.31.1"
