[package]
name = "node-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blockchain-core = { path = "../blockchain-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
sha2 = "0.10.9"
secp256k1 = "0.31.1"
hex = "0.4.3"
rand = "0.9.1"
igd = { version = "0.12.1", features = ["aio"]}
local-ip-address = "0.6.5"
easy-upnp = "0.2.1"
ctrlc = "3.4.7"
once_cell = "1.21.3"
