[package]
name = "node-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2.0.14"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
chrono = "0.4"
hex = "0.4"
blockchain-core = { path = "../blockchain-core" }
futures = "0.3"
