[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand"] }
rand = "0.9.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blockchain-core = { path = "../blockchain-core" }
sha2 = "0.10.9"
clap = { version = "4.5", features = ["derive"] }
bs58 = "0.5.1"
chrono = "0.4"