[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
opencl-backend = ["dep:opencl3"]

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand"] }
rand = "0.10.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blockchain-core = { path = "../blockchain-core" }
sha2 = "0.10.9"
clap = { version = "4.5", features = ["derive"] }
bs58 = "0.5.1"
chrono = "0.4"
rpassword = "7.3.1"
rustyline = "17.0.2"
wgpu = "28.0.0"
bip39 = "2.2.0"
hkdf = "0.12.4"
opencl3 = { version = "0.12.1", optional = true }
