[package]
name = "wallet-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blockchain-core = { path = "../blockchain-core" }
chrono = "0.4"
hex = "0.4"
http = "1.3.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
keyring = "3.6.3"
mime_guess = "2.0.5"
rand = "0.9.1"
secp256k1 = { version = "0.31.1", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
winit = "0.30.12"
wry = "0.53.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
